files/script/test_all_one/parse_error/char/test_char_error2.ll


def main()
{
    var i = 1
    var j

    j = &i
    j \= i
    print("i = ", i)
    print("j = ", j)
}

#script("script/test_all/parse_error/char/test_char_error2.ll")
